--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
             <br><br>
 
                   <div class="fightingGame-container">
-                      <script src="https://unpkg.com/kaboom@3000.0.0-beta.2/dist/kaboom.js"></script>
-                      <script src="fighting-game.js"></script>
+                      <a href="https://naira-duda-04.github.io/FightingGame/" class="logo">
+                    <img src=space2.PNG" class="space">
+                </a>
                  </div>
       </div>
         <br><br><br><br><br><br>
