--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                   <div class="fightingGame-container">
                       <a href="https://naira-duda-04.github.io/FightingGame/" class="logo">
-                    <img src=space2.PNG" class="space">
+                    <img src="fhiter.PNG" class="space">
                 </a>
                  </div>
       </div>
