--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <br><br>
 
-                  <div class="fightingGame-container">
+                  <div class=".container1">
                       <a href="https://naira-duda-04.github.io/FightingGame/" class="logo">
                     <img src="fhiter.PNG" class="space">
                 </a>
