--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <br><br>
 
                   <div class=".container1">
-                      <a href="https://naira-duda-04.github.io/FightingGame/" class="logo">
+                      <a href="https://naira-duda-04.github.io/FightingGame/">
                     <img src="fhiter.PNG" class="space">
                 </a>
                  </div>
