--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
     
               <!--Card 4-->
               <div class="box">
-                  <img src="https://github.com/TrixStartup/NossosJogos-img/blob/main/game101.PNG?raw=true" alt="">
+                  <img src="https://st3.depositphotos.com/13780816/16261/v/600/depositphotos_162614382-stock-illustration-tetris-elements-brick-pieces-game.jpg" alt="">
                   <div class="box-text">
-                      <h2>Base Defense</h2>
+                      <h2>tetris</h2>
                       <br><br>
                       <div class="rating-download">
                           <div class="rating">
