--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <div class="box">
                   <img src="https://st3.depositphotos.com/13780816/16261/v/600/depositphotos_162614382-stock-illustration-tetris-elements-brick-pieces-game.jpg" alt="">
                   <div class="box-text">
-                      <h2>tetris</h2>
+                      <h2>Tetris</h2>
                       <br><br>
                       <div class="rating-download">
                           <div class="rating">
