--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <br><br>
 
-                  <div class="container1">
+                  <div class="container">
                       <a href="https://naira-duda-04.github.io/FightingGame/">
                     <img src="fhiter.PNG" class="space">
                 </a>
